<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>iiwa_description</name>
  <version>0.0.0</version>
  <description>Package with description files for a KUKA iiwa robot</description>

  <maintainer email="m.bednarczyk@unistra.fr">m.bednarczyk</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>mock_components</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
